--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #06061a;
+    color: white;
+    font-family: "JetBrains Mono",monospace;
 }
 
 .board {
@@ -16,6 +19,9 @@
     height: calc(64px * 8);
     display: flex;
     flex-wrap: wrap;
+    border: 20px solid #2f2c2c;
+    margin: 30px;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
 }
 
 .cell{
@@ -55,15 +61,52 @@
     height: calc(50vh - 60px);
     padding: 30px;
     margin-left: 50px;
-    background-color: lightgray;
+    background-color: #36395A;
 }
 
 .restart {
-    background-color: white;
-    font-size: 16px;
-    text-decoration: none;
-    padding: 2%;
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
     cursor: pointer;
+    display: inline-flex;
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.restart:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.restart:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+.restart:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
 }
 
 .currentplayer {
